--- a/package.json
+++ b/package.json
@@ -1,55 +1,69 @@
 {
   "name": "@kabigon/lamda",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "repository": {
     "url": "git+https://github.com/kabimew/lamda.git",
     "type": "git"
   },
+  "sideEffects": true,
   "license": "MIT",
   "types": "dist/index.d.ts",
+  "engines": {
+    "node": ">=12.14.1"
+  },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "@types/jest": "^24.9.0",
     "@types/lodash": "^4.14.149",
+    "@types/node": "^13.1.8",
     "@types/ramda": "^0.26.39",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
     "@types/styled-components": "^4.4.0",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
+    "child_process": "^1.0.2",
+    "colors": "^1.4.0",
+    "commitizen": "^4.0.3",
     "concurrently": "^5.0.0",
+    "coveralls": "^3.0.9",
+    "cz-conventional-changelog": "^3.0.2",
     "eslint": "^6.7.1",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
+    "git-cz": "^4.2.0",
+    "husky": "^4.2.0",
     "install-peers-cli": "^2.1.1",
+    "jest": "^25.1.0",
+    "jest-config": "^25.1.0",
+    "path": "^0.12.7",
     "prepend-file": "^1.3.1",
     "prettier": "^1.19.1",
+    "prompt": "^1.0.0",
+    "replace-in-file": "^5.0.2",
+    "rimraf": "^3.0.0",
     "rollup": "^1.27.5",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-sourcemaps": "^0.5.0",
     "rollup-plugin-typescript": "^1.0.0",
     "rollup-plugin-typescript2": "^0.25.2",
-    "ts-node": "^8.5.2",
+    "semantic-release": "^16.0.2",
+    "shelljs": "^0.8.3",
+    "travis-deploy-once": "^5.0.11",
+    "ts-jest": "^24.3.0",
+    "ts-node": "^8.6.2",
     "tslib": "^1.10.0",
+    "typedoc": "^0.16.8",
     "typescript": "^3.7.2"
   },
   "peerDependencies": {
-    "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.15",
     "ramda": "^0.26.1"
-  },
-  "scripts": {
-    "build": "rollup -c",
-    "build-watch": "rollup -c -w",
-    "prepublishOnly": "yarn run build",
-    "start-example": "cd example && yarn start",
-    "deploy-example": "cd example && yarn run deploy",
-    "dev": "concurrently --kill-others \"yarn run build-watch\" \"yarn run start-example\"",
-    "test": "ts-node test/test.ts",
-    "pretest": "yarn run build",
-    "test:lint": "eslint ./src/**/*.ts ./src/**/*.tsx ./example/src/**/*.ts ./example/src/**/*.tsx",
-    "test:lint:fix": "yarn run test:lint -- --fix"
   },
   "files": [
     "dist"
@@ -69,5 +83,26 @@
     "undescore",
     "immutable"
   ],
-  "author": "kabigon"
+  "author": "kabigon",
+  "scripts": {
+    "build": "rollup -c",
+    "prebuild": "rimraf dist",
+    "build-watch": "rollup -c -w",
+    "prepublishOnly": "yarn run build",
+    "dev": "concurrently --kill-others \"yarn run build-watch\" \"yarn run start-example\"",
+    "test": "jest --coverage",
+    "test:watch": "jest --coverage --watch",
+    "test:prod": "npm run lint && npm run test -- --no-cache",
+    "lint": "eslint ./src/**/*.ts",
+    "pretest": "yarn run build",
+    "test:lint": "eslint ./src/**/*.ts",
+    "test:lint:fix": "yarn run test:lint -- --fix",
+    "commit": "git-cz",
+    "precommit": "lint-staged",
+    "semantic-release": "semantic-release",
+    "semantic-release-prepare": "ts-node scripts/semantic-release-prepare",
+    "start": "rollup -c rollup.config.js -w",
+    "deploy-docs": "ts-node scripts/gh-pages-publish",
+    "report-coverage": "cat ./coverage/lcov.info | coveralls"
+  }
 }
